unpackaged/main/default/objects/Brainshark__c/Brainshark__c.object-meta.xml
<CustomObject>
    <description>This custom object stores data imported from brainshark</description>
    <label>Brainshark</label>
    <nameField>
        <displayFormat>BSHK-{000}</displayFormat>
        <label>Brainshark</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brainshark</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>