unpackaged/main/default/objects/Brainshark__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Brainshark</relationshipLabel>
    <relationshipName>Brainshark</relationshipName>
    <type>Lookup</type>
</CustomField>