unpackaged/main/default/objects/Brainshark__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Brainshark</relationshipLabel>
    <relationshipName>Brainshark</relationshipName>
    <type>Lookup</type>
</CustomField>