unpackaged/main/default/objects/Brainshark__c/fields/GBCustom1__c.field-meta.xml
<CustomField>
    <fullName>GBCustom1__c</fullName>
    <label>GBCustom1 (User)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>