unpackaged/main/default/objects/Brainshark__c/fields/GBCustom2__c.field-meta.xml
<CustomField>
    <fullName>GBCustom2__c</fullName>
    <label>GBCustom2 (Contact)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>