unpackaged/main/default/objects/Brainshark__c/fields/GBCustom3_Company__c.field-meta.xml
<CustomField>
    <fullName>GBCustom3_Company__c</fullName>
    <label>GBCustom3 (Company)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>