unpackaged/main/default/objects/Brainshark__c/fields/GBEMail__c.field-meta.xml
<CustomField>
    <fullName>GBEMail__c</fullName>
    <label>GBEMail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>