unpackaged/main/default/objects/Brainshark__c/fields/GBFirstName__c.field-meta.xml
<CustomField>
    <fullName>GBFirstName__c</fullName>
    <label>GBFirstName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>