unpackaged/main/default/objects/Brainshark__c/fields/GBLastName__c.field-meta.xml
<CustomField>
    <fullName>GBLastName__c</fullName>
    <label>GBLastName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>