unpackaged/main/default/objects/Brainshark__c/fields/IntegrationAppKey1__c.field-meta.xml
<CustomField>
    <fullName>IntegrationAppKey1__c</fullName>
    <label>IntegrationAppKey1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>