unpackaged/main/default/objects/Brainshark__c/fields/PercentDuration__c.field-meta.xml
<CustomField>
    <fullName>PercentDuration__c</fullName>
    <label>PercentDuration</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>