unpackaged/main/default/objects/Brainshark__c/fields/PercentScore__c.field-meta.xml
<CustomField>
    <fullName>PercentScore__c</fullName>
    <label>Quiz Score</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>