unpackaged/main/default/objects/Brainshark__c/fields/PercentSlidesViewed__c.field-meta.xml
<CustomField>
    <fullName>PercentSlidesViewed__c</fullName>
    <label>PercentSlidesViewed</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>