unpackaged/main/default/objects/Brainshark__c/fields/Roll_This_Record_Up__c.field-meta.xml
<CustomField>
    <fullName>Roll_This_Record_Up__c</fullName>
    <formula>IF( 
OR( 
Sort_Title__c = &quot;Compliance MA00005150419 (#662697667)&quot;,
Sort_Title__c = &quot;USA compliance e-learning module MA0219R1 (#449321226)&quot;,
Sort_Title__c = &quot;USA compliance e-learning module MA0219R2 (#449321226)&quot;,
Sort_Title__c = &quot;USA Compliance e-learning module MA0219R3 (#390951584)&quot;,
Sort_Title__c = &quot;Canada Compliance e-learning module MA0233R1 (#336138884)&quot;,
Sort_Title__c = &quot;Canada Compliance e-learning module MA0233R2 (#802471996)&quot;)
,true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Roll This Record Up</label>
    <type>Checkbox</type>
</CustomField>