unpackaged/main/default/objects/Brainshark__c/fields/SlidesViewed__c.field-meta.xml
<CustomField>
    <fullName>SlidesViewed__c</fullName>
    <label>SlidesViewed</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>