unpackaged/main/default/objects/Brainshark__c/fields/Sort2__c.field-meta.xml
<CustomField>
    <fullName>Sort2__c</fullName>
    <label>Sort2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>