unpackaged/main/default/objects/Brainshark__c/fields/Sort3__c.field-meta.xml
<CustomField>
    <fullName>Sort3__c</fullName>
    <label>Sort3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>