unpackaged/main/default/objects/Brainshark__c/fields/Sort_Title__c.field-meta.xml
<CustomField>
    <fullName>Sort_Title__c</fullName>
    <label>Module Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>