unpackaged/main/default/objects/Brainshark__c/fields/ViewCompleted__c.field-meta.xml
<CustomField>
    <fullName>ViewCompleted__c</fullName>
    <label>ViewCompleted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>