unpackaged/main/default/objects/Brainshark__c/fields/Viewing_Time_Mins__c.field-meta.xml
<CustomField>
    <fullName>Viewing_Time_Mins__c</fullName>
    <formula>ViewingTime__c /60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Viewing Time (Mins)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>