unpackaged/main/default/objects/Brainshark__c/fields/ViewingTime__c.field-meta.xml
<CustomField>
    <fullName>ViewingTime__c</fullName>
    <label>ViewingTime</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>