unpackaged/main/default/objects/Brainshark__c/fields/ViewIsMobile__c.field-meta.xml
<CustomField>
    <fullName>ViewIsMobile__c</fullName>
    <label>ViewIsMobile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>