unpackaged/main/default/objects/Brainshark__c/fields/ViewTotalPctofDuration__c.field-meta.xml
<CustomField>
    <fullName>ViewTotalPctofDuration__c</fullName>
    <label>ViewTotalPctofDuration</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>