unpackaged/main/default/objects/Brainshark__c/fields/ViewTotalPctofSlides__c.field-meta.xml
<CustomField>
    <fullName>ViewTotalPctofSlides__c</fullName>
    <label>% Completion of Slides</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>