unpackaged/main/default/objects/Brainshark__c/fields/ViewTotalPoints__c.field-meta.xml
<CustomField>
    <fullName>ViewTotalPoints__c</fullName>
    <label>ViewTotalPoints</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>