unpackaged/main/default/objects/Brainshark__c/fields/ViewTotalScore__c.field-meta.xml
<CustomField>
    <fullName>ViewTotalScore__c</fullName>
    <label>ViewTotalScore</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>