unpackaged/main/default/objects/Brainshark__c/fields/ViewTotalSlidesViewed__c.field-meta.xml
<CustomField>
    <fullName>ViewTotalSlidesViewed__c</fullName>
    <label>ViewTotalSlidesViewed</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>