unpackaged/main/default/objects/Brainshark__c/fields/ViewType__c.field-meta.xml
<CustomField>
    <fullName>ViewType__c</fullName>
    <label>ViewType</label>
    <length>40</length>
    <type>Text</type>
</CustomField>