unpackaged/main/default/objects/Brainshark__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>User__c</columns>
    <columns>GBEMail__c</columns>
    <columns>Sort_Title__c</columns>
    <columns>Viewing_Time_Mins__c</columns>
    <columns>ViewTotalPctofSlides__c</columns>
    <columns>PercentScore__c</columns>
    <columns>DateTime__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>