unpackaged/main/default/objects/Brainshark__c/listViews/This_Month.listView-meta.xml
<ListView>
    <fullName>This_Month</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>DateTime__c</columns>
    <columns>Contact__c</columns>
    <columns>GBFirstName__c</columns>
    <columns>GBLastName__c</columns>
    <columns>Community_Item__c</columns>
    <columns>PercentSlidesViewed__c</columns>
    <columns>PercentDuration__c</columns>
    <columns>Sort_Title__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>This Month</label>
</ListView>