unpackaged/main/default/objects/Brainshark__c/listViews/This_Weeks_Brainshark.listView-meta.xml
<ListView>
    <fullName>This_Weeks_Brainshark</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Community_Item__c</columns>
    <columns>DateTime__c</columns>
    <columns>GBFirstName__c</columns>
    <columns>GBLastName__c</columns>
    <columns>PercentScore__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>This Weeks Brainshark</label>
</ListView>